--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
+    "@mui-treasury/layout": "^4.4.1",
+    "@mui-treasury/mockup": "^1.2.4",
+    "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "animate.css": "^4.1.0",
+    "animate.css-react": "^1.0.0",
+    "coinpayments": "^2.1.0",
+    "localized-strings": "^0.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-paginate": "^6.3.2",
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "rxjs": "^6.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
