--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@mui-treasury/layout": "^4.4.1",
     "@mui-treasury/mockup": "^1.2.4",
     "@reach/router": "^1.3.3",
