--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@mui-treasury/layout": "^4.4.1",
-    "@mui-treasury/mockup": "^1.2.4",
     "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,6 +13,7 @@
     "animate.css": "^4.1.0",
     "animate.css-react": "^1.0.0",
     "coinpayments": "^2.1.0",
+    "firebase": "^7.15.4",
     "localized-strings": "^0.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -22,6 +21,7 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "rxfire": "^3.13.4",
     "rxjs": "^6.5.5"
   },
   "scripts": {
