--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "animate.css": "^4.1.0",
     "animate.css-react": "^1.0.0",
     "coinpayments": "^2.1.0",
     "firebase": "^7.15.4",
     "localized-strings": "^0.2.4",
     "react": "^16.13.1",
+    "react-animated-css": "^1.2.1",
+    "react-country-flag": "^2.2.0",
     "react-dom": "^16.13.1",
     "react-paginate": "^6.3.2",
     "react-redux": "^7.2.0",
