--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -10,17 +11,25 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "animate.css-react": "^1.0.0",
+    "bitcoin-exchange-rate": "^1.3.3",
     "coinpayments": "^2.1.0",
+    "cryptocompare": "^1.0.0",
+    "currencies-exchange-rates": "^1.0.2",
+    "currency-codes": "^2.1.0",
+    "currency-symbol-map": "^4.0.4",
+    "easy-currencies": "^1.4.2",
     "firebase": "^7.15.4",
     "localized-strings": "^0.2.4",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
     "react-country-flag": "^2.2.0",
     "react-dom": "^16.13.1",
+    "react-number-format": "^4.4.1",
     "react-paginate": "^6.3.2",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
+    "reactjs-localstorage": "^1.0.1",
     "redux": "^4.0.5",
     "rxfire": "^3.13.4",
     "rxjs": "^6.5.5"
