--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "axios-observable": "^1.1.3",
     "bitcoin-exchange-rate": "^1.3.3",
     "coinpayments": "^2.1.0",
+    "country-code-lookup": "0.0.17",
+    "country-currency-map": "^2.1.7",
     "cryptocompare": "^1.0.0",
-    "currencies-exchange-rates": "^1.0.2",
     "currency-codes": "^2.1.0",
     "currency-symbol-map": "^4.0.4",
     "easy-currencies": "^1.4.2",
     "firebase": "^7.15.4",
     "localized-strings": "^0.2.4",
+    "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-countdown": "^2.2.1",
     "react-country-flag": "^2.2.0",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
@@ -31,8 +37,10 @@
     "react-spinners": "^0.9.0",
     "reactjs-localstorage": "^1.0.1",
     "redux": "^4.0.5",
+    "repeat": "^1.2.0",
     "rxfire": "^3.13.4",
-    "rxjs": "^6.5.5"
+    "rxjs": "^6.5.5",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
