--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "easy-currencies": "^1.4.2",
     "firebase": "^7.15.4",
     "localized-strings": "^0.2.4",
+    "material-table": "^1.69.0",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
@@ -30,6 +31,7 @@
     "react-countdown": "^2.2.1",
     "react-country-flag": "^2.2.0",
     "react-dom": "^16.13.1",
+    "react-load-script": "^0.0.6",
     "react-number-format": "^4.4.1",
     "react-paginate": "^6.3.2",
     "react-redux": "^7.2.0",
