--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "default": "hotblock-48cbf",
-    "digitaloceanfront": "admin-fa3ba"
+    "digitaloceanfront": "admin-fa3ba",
+    "hotblocknewww": "hotblock-48cbf"
   }
 }
