--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,5 @@
 {
   "projects": {
-    "default": "hotblock-48cbf",
-    "digitaloceanfront": "admin-fa3ba",
-    "hotblocknewww": "hotblock-48cbf"
+    "hjjj": "hotblock-48cbf"
   }
 }
