--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "axios-observable": "^1.1.3",
     "bitcoin-exchange-rate": "^1.3.3",
+    "bizcharts": "^4.0.14",
     "coinpayments": "^2.1.0",
     "country-code-lookup": "0.0.17",
     "country-currency-map": "^2.1.7",
