--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "hjjj": "hotblock-48cbf",
-    "frontend": "admin-fa3ba"
+    "frontend": "admin-fa3ba",
+    "new": "coininvest-d15a3"
   }
 }
