--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-countdown": "^2.2.1",
     "react-country-flag": "^2.2.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-load-script": "^0.0.6",
     "react-number-format": "^4.4.1",
     "react-paginate": "^6.3.2",
