--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@y2nk4/currency-converter": "^1.0.2",
     "axios": "^0.19.2",
     "axios-observable": "^1.1.3",
     "bitcoin-exchange-rate": "^1.3.3",
@@ -21,11 +22,12 @@
     "coinpayments": "^2.1.0",
     "country-code-lookup": "0.0.17",
     "country-currency-map": "^2.1.7",
-    "cryptocompare": "^1.0.0",
     "currency-codes": "^2.1.0",
     "currency-symbol-map": "^4.0.4",
+    "detect-browser-language": "^0.0.2",
     "easy-currencies": "^1.4.2",
     "firebase": "^7.15.4",
+    "jss-rtl": "^0.3.0",
     "localized-strings": "^0.2.4",
     "material-table": "^1.69.0",
     "qrcode.react": "^1.0.0",
