--- a/.firebaserc
+++ b/.firebaserc
@@ -3,6 +3,8 @@
     "hjjj": "hotblock-48cbf",
     "frontend": "admin-fa3ba",
     "new": "coininvest-d15a3",
-    "hotblockinvest": "hotblockinvest"
+    "hotblockinvest": "hotblockinvest",
+    "hotblockinest": "hotblocks-140ad",
+    "hotblockinvestmain": "hotblocks-140ad"
   }
 }
