--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://web.hotblockinvest.com/account",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#1565c0",
   "background_color": "#ffffff"
