--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Hotblockinvest",
+  "short_name": "cryptotradecenter",
   "name": "Invest in cryptocurrency",
   "icons": [
     {
