--- a/.firebaserc
+++ b/.firebaserc
@@ -7,6 +7,7 @@
     "hotblockinest": "hotblocks-140ad",
     "cryptotradecentermain": "hotblocks-140ad",
     "cointradecenter": "cointradecenter-ad3f5",
-    "cointrader": "cointradecenter-ad3f5"
+    "cointrader": "cointradecenter-ad3f5",
+    "cryptotrade": "cointradecenter-ad3f5"
   }
 }
