--- a/.firebaserc
+++ b/.firebaserc
@@ -8,6 +8,7 @@
     "cryptotradecentermain": "hotblocks-140ad",
     "cointradecenter": "cointradecenter-ad3f5",
     "cointrader": "cointradecenter-ad3f5",
-    "cryptotrade": "cointradecenter-ad3f5"
+    "cryptotrade": "cointradecenter-ad3f5",
+    "ct": "cointradecenter-ad3f5"
   }
 }
