--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@y2nk4/currency-converter": "^1.0.2",
+    "animate.css": "^4.1.1",
     "axios": "^0.19.2",
     "axios-observable": "^1.1.3",
     "bitcoin-exchange-rate": "^1.3.3",
@@ -33,6 +34,7 @@
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
+    "react-animation-on-scroll": "^2.1.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-countdown": "^2.2.1",
     "react-country-flag": "^2.2.0",
@@ -41,9 +43,11 @@
     "react-load-script": "^0.0.6",
     "react-number-format": "^4.4.1",
     "react-paginate": "^6.3.2",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.9.0",
+    "react-tiny-fab": "^4.0.2",
     "react-tsparticles": "^1.18.8",
     "reactjs-localstorage": "^1.0.1",
     "redux": "^4.0.5",
