--- a/.firebaserc
+++ b/.firebaserc
@@ -9,6 +9,7 @@
     "cointradecenter": "cointradecenter-ad3f5",
     "cointrader": "cointradecenter-ad3f5",
     "cryptotrade": "cointradecenter-ad3f5",
-    "ct": "cointradecenter-ad3f5"
+    "ct": "cointradecenter-ad3f5",
+    "skima": "skimasite"
   }
 }
