--- a/.firebaserc
+++ b/.firebaserc
@@ -10,6 +10,7 @@
     "cointrader": "cointradecenter-ad3f5",
     "cryptotrade": "cointradecenter-ad3f5",
     "ct": "cointradecenter-ad3f5",
-    "skima": "skimasite"
+    "skima": "skimasite",
+    "sk": "skimasite"
   }
 }
