--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hotblock",
+  "name": "unchainetrade",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +18,8 @@
     "animate.css": "^4.1.1",
     "axios": "^0.19.2",
     "axios-observable": "^1.1.3",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-named-asset-import": "^0.3.7",
     "bitcoin-exchange-rate": "^1.3.3",
     "bizcharts": "^4.0.14",
     "coinpayments": "^2.1.0",
@@ -28,6 +30,7 @@
     "detect-browser-language": "^0.0.2",
     "easy-currencies": "^1.4.2",
     "firebase": "^7.15.4",
+    "humanize-duration": "^3.27.0",
     "jss-rtl": "^0.3.0",
     "localized-strings": "^0.2.4",
     "material-table": "^1.69.0",
@@ -46,6 +49,7 @@
     "react-player": "^2.9.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "react-simple-image-viewer": "^0.0.8",
     "react-spinners": "^0.9.0",
     "react-tiny-fab": "^4.0.2",
     "react-tsparticles": "^1.18.8",
