--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "unchainedtrade",
-  "name": "Invest in cryptocurrency",
+  "name": "Cryptocurrency cloud mining",
   "icons": [
     {
       "src": "favicon.ico",
