--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": "./account",
   "display": "standalone",
-  "theme_color": "#1565c0",
+  "theme_color": "#ff5722",
   "background_color": "#ffffff"
 }
