--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "coinpayments": "^2.1.0",
     "country-code-lookup": "0.0.17",
     "country-currency-map": "^2.1.7",
+    "craco-plugin-scoped-css": "^1.1.1",
     "currency-codes": "^2.1.0",
     "currency-symbol-map": "^4.0.4",
     "detect-browser-language": "^0.0.2",
